更新代码说明

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 # .env 文件内容
 
-#ton liteServer配置
-SERVER_IP=
-SERVER_PORT=
-SERVER_ID_TYPE=
+#ton liteServer配置 通过命令查看 sudo cat /usr/bin/ton/local.config.json
+#使用127.0.0.1作为服务器IP
+SERVER_IP=2130706433
+SERVER_PORT=27758
+SERVER_ID_TYPE=pub.ed25519
 SERVER_ID_KEY=
 
 # 邮件配置
-EMAIL_USER=
-EMAIL_PASS=
-EMAIL_TO=
+EMAIL_USER=xxx@gmail.com
+EMAIL_PASS=xxx
+EMAIL_TO=xxx@gmail.com
 
 #监控端口配置
 PORT=3000
